[project]
name = "agentforge"
version = "0.1.0"
description = "AgentForge OpenEnv environment"
authors = [
    { name = "Ayush" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "streamlit",
    "pandas",
    "numpy",
    "matplotlib",
    "openai",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "tools"]